agregando interaccion con el teclado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,10 @@ div{
     background-color: yellow;
 }
 
+
+#key {
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    border:2px solid black;
+}
